--- a/p5-tutorial/package.json
+++ b/p5-tutorial/package.json
@@ -18,6 +18,8 @@
   },
   "dependencies": {
     "@loadable/component": "^5.12.0",
+    "axios": "^0.21.4",
+    "crypto": "^1.0.1",
     "gatsby": "^2.20.12",
     "gh-pages": "^2.2.0",
     "react": "^16.12.0",
