--- a/p5-tutorial/package.json
+++ b/p5-tutorial/package.json
@@ -25,7 +25,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-p5": "^1.3.2",
-    "react-p5-wrapper": "^2.0.0"
+    "react-p5-wrapper": "^2.0.0",
+    "styled-components": "^5.3.1"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
