--- a/package.json
+++ b/package.json
@@ -18,9 +18,19 @@
   },
   "dependencies": {
     "@loadable/component": "^5.12.0",
+    "@material-ui/core": "^4.12.3",
     "axios": "^0.21.4",
     "crypto": "^1.0.1",
     "gatsby": "^2.20.12",
+    "gatsby-image": "^3.11.0",
+    "gatsby-material-ui-components": "^2.0.1",
+    "gatsby-plugin-image": "^1.14.0",
+    "gatsby-plugin-material-ui": "^4.0.3",
+    "gatsby-plugin-sharp": "^3.14.0",
+    "gatsby-plugin-webfonts": "^2.1.1",
+    "gatsby-source-filesystem": "^3.14.0",
+    "gatsby-theme-material-ui": "^2.0.1",
+    "gatsby-transformer-sharp": "^3.14.0",
     "gh-pages": "^2.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
