--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
     "@loadable/component": "^5.12.0",
     "@material-ui/core": "^4.12.3",
+    "@mui/material": "^5.0.1",
     "axios": "^0.21.4",
     "crypto": "^1.0.1",
     "gatsby": "^2.20.12",
