--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@loadable/component": "^5.12.0",
     "@material-ui/core": "^4.12.3",
     "@mui/material": "^5.0.1",
+    "@mui/system": "^5.0.1",
     "axios": "^0.21.4",
     "crypto": "^1.0.1",
     "gatsby": "^2.20.12",
