--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mui/system": "^5.0.1",
     "axios": "^0.21.4",
     "crypto": "^1.0.1",
+    "dotenv": "^10.0.0",
     "gatsby": "^2.20.12",
     "gatsby-image": "^3.11.0",
     "gatsby-material-ui-components": "^2.0.1",
@@ -38,9 +39,11 @@
     "gh-pages": "^2.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-helmet": "^6.1.0",
     "react-p5": "^1.3.2",
     "react-p5-wrapper": "^2.0.0",
-    "styled-components": "^5.3.1"
+    "styled-components": "^5.3.1",
+    "web3-eth": "^1.5.3"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
