--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "@emotion/styled": "^11.3.0",
     "@loadable/component": "^5.12.0",
     "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/styles": "^4.11.4",
     "@mui/material": "^5.0.1",
     "@mui/system": "^5.0.1",
     "axios": "^0.21.4",
+    "classnames": "^2.3.1",
     "crypto": "^1.0.1",
     "dotenv": "^10.0.0",
     "gatsby": "^2.20.12",
