--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "gatsby-plugin-webfonts": "^2.1.1",
     "gatsby-source-filesystem": "^3.14.0",
     "gatsby-theme-material-ui": "^2.0.1",
+    "gatsby-transformer-json": "^4.4.0",
     "gatsby-transformer-sharp": "^3.14.0",
     "gh-pages": "^2.2.0",
     "react": "^16.12.0",
